--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -9,10 +9,10 @@
 <meta name="author" content="<%= config.author %>" />
 
 <% if (is_home()){ %>
-    <% if (theme.baidu_site) { %> 
+    <% if (theme.baidu_site) { %>
         <meta name="baidu-site-verification" content="<%- theme.baidu_site %>" />
     <% } %>
-    <% if (theme.google_site) { %> 
+    <% if (theme.google_site) { %>
         <meta name="google-site-verification" content="<%- theme.google_site %>" />
     <% } %>
 <% } %>
@@ -102,15 +102,11 @@ if ( is_archive() ) {
 <% } %>
 
 <% if (theme.baidu_tongji){ %>
-    <script>
-        var _hmt = _hmt || [];
-        (function() {
-            var hm = document.createElement("script");
-            hm.src = "//hm.baidu.com/hm.js?<%=theme.baidu_tongji%>";
-            var s = document.getElementsByTagName("script")[0]; 
-            s.parentNode.insertBefore(hm, s);
-        })();
-    </script>
+    <%- partial('head/baidu-tongji') -%>
+<% } %>
+
+<% if(theme.google_analytics){ %>
+  <%- partial('head/google-analytics') -%>
 <% } %>
 
 </head>
